# flood_aid

./: .env  .gitignore  README.md  pyproject.toml  requirements-init.txt  ruff.toml
flood_aid/accounts/: admin.py  decorators.py  forms.py  urls.py  views.py
flood_aid/accounts/migrations/: 0002_user_groups_user_is_superuser_user_is_verified_and_more.py  0003_user_operating_license.py  0004_charityorganization.py  0005_charityorganization_operating_license_and_more.py  0006_remove_user_operating_license.py  0007_alter_user_user_type.py  0008_alter_user_user_type.py
flood_aid/accounts/models/: __init__.py  charity_organization.py  user.py
flood_aid/accounts/tests/models/: test_user.py
flood_aid/config/: urls.py  wsgi.py
flood_aid/config/settings/: base.py  dev.py
flood_aid/donations/: admin.py  forms.py  urls.py  views.py
flood_aid/donations/management/commands/: populate_campaigns.py  populate_disaster_areas.py
flood_aid/donations/migrations/: 0001_initial.py  0002_remove_campaign_disaster_area_and_more.py  0003_campaign_thumbnail.py  0004_donation.py  0005_alter_donation_transaction_id.py  0006_alter_campaign_status_alter_disasterarea_severity_and_more.py
flood_aid/donations/models/: __init__.py  campaign.py  comment.py  disaster_area.py  donation.py
flood_aid/templates/: base.html  home.html
flood_aid/templates/accounts/: login.html  profile.html  register.html  verify_otp.html
flood_aid/templates/donations/: campaign_form.html  campaigns.html  delete_campaign.html  disaster_areas.html  donation_history.html  manage_campaigns.html
